estruturada a requisao put

--- a/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -81,7 +81,7 @@
                     mat-icon-button
                     aria-label="ícone Button"
                     class="icon-spacing"
-                    (click)="openDialogEditar()"
+                    (click)="abrirModalEditar(element)"
                 >
                     <mat-icon color="primary"> border_color</mat-icon>
                 </button>
