quando clicar no agendamento chama a funcao q vai mostar o agendamento na tabela

--- a/src/@vex/layout/toolbar/toolbar.component.html
+++ b/src/@vex/layout/toolbar/toolbar.component.html
@@ -34,7 +34,7 @@
             <vex-toolbar-notifications></vex-toolbar-notifications>
         </div>
 
-        <div class="px-1">
+        <div id="agendaDia" class="px-1">
           <button (click)="openQuickpanel()" mat-icon-button type="button">
             <mat-icon [icIcon]="icDateRange"></mat-icon>
           </button>
