--- a/src/@vex/layout/quickpanel/quickpanel.component.html
+++ b/src/@vex/layout/quickpanel/quickpanel.component.html
@@ -10,7 +10,7 @@
   <h3 matSubheader>Agendamentos do dia</h3>
   <div *ngFor="let agendaHoje of listaAgendamentos">
     <a [routerLink]="[]" mat-list-item>
-      <h4 matLine>{{ agendaHoje.cliente.nome }}</h4>
+      <h4 matLine (click)="mostraAgendamento()">{{ agendaHoje.cliente.nome }}</h4>
       <p matLine>{{ agendaHoje.dtAtendimento | date: "hh:mm" }}</p>
     </a>
   </div>
