subindo arquivos pertinentes a criação de telas plotadas com modal de em construção no menu da aplicação sendo elas painel, comentários e configurações

--- a/src/app/core/lib/components/modais/construcao-modal/construcao-modal.component.html
+++ b/src/app/core/lib/components/modais/construcao-modal/construcao-modal.component.html
@@ -1,5 +1,5 @@
 <div class="px-6 py-4 border-b" fxLayout="row" fxLayoutAlign="start center">
-    <h2 class="title m-0">Construção</h2>
+    <!-- <h2 class="title m-0">Construção</h2> -->
 </div>
 <mat-dialog-content>
     <div class="alinhar">
@@ -7,7 +7,7 @@
     </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
+    <!-- <button mat-button mat-dialog-close>Cancelar</button>
     <button
         mat-button
         [mat-dialog-close]="true"
@@ -15,5 +15,5 @@
         color="primary"
     >
         Adicionar
-    </button>
+    </button> -->
 </mat-dialog-actions>
