--- a/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -120,7 +120,7 @@
                         <mat-label>Hora</mat-label>
                         <input
                             matInput
-                            formControlName="hora"
+                            formControlName="data"
                             placeholder="Ex. 12:30"
                         />
                         <mat-error
