--- a/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="botao-view">
     <div class="btnAdd">
-      <button mat-button mat-raised-button color="primary" (click)="openAdd()">Adicionar <mat-icon>add</mat-icon></button>
+      <button mat-button mat-raised-button color="primary" (click)="abrirModalCadastrarEditar()">Adicionar <mat-icon>add</mat-icon></button>
   </div>
   <div class="viewPag">
       <button mat-button (click)="visualizar()">
@@ -70,11 +70,12 @@
         <!-- Ícone da tabela -->
         <ng-container matColumnDef="icone">
             <th mat-header-cell *matHeaderCellDef></th>
-            <td class="layout-menu" mat-cell *matCellDef="let element">
+            <td class="layout-menu" mat-cell *matCellDef="let produto">
                 <button
                     mat-icon-button
                     aria-label="ícone Button"
                     class="icon-spacing"
+                    (click)="abrirModalCadastrarEditar(produto)"
                 >
                     <mat-icon color="primary"> border_color</mat-icon>
                 </button>
@@ -82,7 +83,7 @@
                     mat-icon-button
                     aria-label="ícone Button"
                     class="icon-spacing"
-                    (click)="abrirModalDeletar(element)"
+                    (click)="abrirModalDeletar(produto)"
                 >
                     <mat-icon color="warn">delete</mat-icon>
                 </button>
