--- a/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -74,5 +74,5 @@
 <mat-dialog-actions align="end">
     <button mat-button color="primary" class="cancelar" mat-dialog-close>Cancelar</button>
     <button [mat-dialog-close]="true" mat-raised-button color="primary" 
-    class="cadastrar" (click)="cadastrarAgendamento(agendamento)">Adicionar</button>
+    class="cadastrar" (click)="cadastrarAgendamento(this.clientForm.value)">Adicionar</button>
 </mat-dialog-actions>
