--- a/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -1,11 +1,6 @@
 <div class="form">
     <!-- Titulo do modal -->
-    <div
-        class="px-6 py-4 border-b"
-        id="title"
-        fxLayout="row"
-        fxLayoutAlign="start center"
-    >
+    <div class="px-6 py-4 border-b" id="title" fxLayout="row" fxLayoutAlign="start center">
         <h2 class="title m-0">Novo Agendamento</h2>
     </div>
 
@@ -15,32 +10,20 @@
             <div [formGroup]="form" class="example-form">
                 <!-- cliente -->
                 <div class="cliente">
-                    <mat-form-field
-                        class="example-full-width"
-                        id="inpN"
-                        appearance="standard"
-                    >
+                    <mat-form-field class="example-full-width" id="inpN" appearance="standard">
                         <mat-label class="cliente">Cliente</mat-label>
                         <input formControlName="cliente" matInput required />
-                        <mat-error
-                            *ngIf="form.get('cliente').hasError('required')"
-                        >
+                        <mat-error *ngIf="form.get('cliente').hasError('required')">
                             Preencha este campo!
                         </mat-error>
                     </mat-form-field>
                 </div>
                 <!-- serviço -->
                 <div class="servico">
-                    <mat-form-field
-                        class="example-full-width"
-                        id="inpN"
-                        appearance="standard"
-                    >
+                    <mat-form-field class="example-full-width" id="inpN" appearance="standard">
                         <mat-label class="servico">Serviço</mat-label>
                         <input formControlName="servico" matInput required />
-                        <mat-error
-                            *ngIf="form.get('servico').hasError('required')"
-                        >
+                        <mat-error *ngIf="form.get('servico').hasError('required')">
                             Preencha este campo!
                         </mat-error>
                     </mat-form-field>
@@ -50,18 +33,10 @@
                 <div class="tempoEs">
                     <mat-form-field id="tempoEst" appearance="standard">
                         <mat-label>Tempo Estimado</mat-label>
-                        <input
-                            formControlName="tempo"
-                            type="text"
-                            matInput
-                            placeholder="Digite o Tempo"
-                            maxlength="3"
-                            required
-                        />
+                        <input formControlName="tempo" type="text" matInput placeholder="Digite o Tempo" maxlength="3"
+                            required />
                         <span matTextPrefix class="minutos">Minutos&nbsp;</span>
-                        <mat-error
-                            *ngIf="form.get('tempo').hasError('required')"
-                        >
+                        <mat-error *ngIf="form.get('tempo').hasError('required')">
                             Preencha este campo!
                         </mat-error>
                     </mat-form-field>
@@ -69,15 +44,8 @@
                     <!-- valor -->
                     <mat-form-field id="categoria" appearance="standard">
                         <mat-label>Valor do Serviço</mat-label>
-                        <input
-                            matInput
-                            formControlName="valor"
-                            required
-                            placeholder="Ex. R$ 50,66"
-                        />
-                        <mat-error
-                            *ngIf="form.get('valor').hasError('required')"
-                        >
+                        <input matInput formControlName="valor" required placeholder="Ex. R$ 50,66" />
+                        <mat-error *ngIf="form.get('valor').hasError('required')">
                             Selecione uma opção!
                         </mat-error>
                     </mat-form-field>
@@ -85,11 +53,7 @@
 
                 <!-- responsavel -->
                 <div class="responsavel">
-                    <mat-form-field
-                        class="example-full-width"
-                        id="descricao"
-                        appearance="standard"
-                    >
+                    <mat-form-field class="example-full-width" id="descricao" appearance="standard">
                         <mat-label>Responsável</mat-label>
                         <input matInput formControlName="responsavel" />
                     </mat-form-field>
@@ -99,33 +63,18 @@
                 <div class="valor">
                     <mat-form-field class="intval" appearance="standard">
                         <mat-label>Data</mat-label>
-                        <input
-                            matInput
-                            [matDatepicker]="picker"
-                            formControlName="data"
-                        />
-                        <mat-datepicker-toggle
-                            matSuffix
-                            [for]="picker"
-                        ></mat-datepicker-toggle>
+                        <input matInput [matDatepicker]="picker" formControlName="data" />
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
-                        <mat-error
-                            *ngIf="form.get('data').hasError('required')"
-                        >
+                        <mat-error *ngIf="form.get('data').hasError('required')">
                             Preencha a data!
                         </mat-error>
                     </mat-form-field>
 
                     <mat-form-field class="intval2" appearance="standard">
                         <mat-label>Hora</mat-label>
-                        <input
-                            matInput
-                            formControlName="data"
-                            placeholder="Ex. 12:30"
-                        />
-                        <mat-error
-                            *ngIf="form.get('hora').hasError('required')"
-                        >
+                        <input matInput formControlName="data" placeholder="Ex. 12:30" />
+                        <mat-error *ngIf="form.get('hora').hasError('required')">
                             Preencha a hora!
                         </mat-error>
                     </mat-form-field>
@@ -137,9 +86,7 @@
                             <mat-option value="option">Aceito</mat-option>
                             <mat-option value="option">Recusado</mat-option>
                         </mat-select>
-                        <mat-error
-                            *ngIf="form.get('status').hasError('required')"
-                        >
+                        <mat-error *ngIf="form.get('status').hasError('required')">
                             Selecione uma opção!
                         </mat-error>
                     </mat-form-field>
@@ -150,12 +97,7 @@
         <!-- botoes adicionar e cancelar -->
         <mat-dialog-actions align="end">
             <button mat-button mat-dialog-close>Cancelar</button>
-            <button
-                mat-button
-                mat-raised-button
-                color="primary"
-                (click)="addUser()"
-            >
+            <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarAgendamento()">
                 Adicionar
             </button>
         </mat-dialog-actions>
