--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -2,9 +2,9 @@
     class="w-full h-full bg-pattern"
     fxLayout="column"
     fxLayoutAlign="center center"
-><mat-progress-bar *ngIf="load" mode="indeterminate"></mat-progress-bar>
-
-    <div   @fadeInUp class="card overflow-hidden w-full max-w-xs">
+>
+    <div @fadeInUp class="card overflow-hidden w-full max-w-xs">
+        <mat-progress-bar *ngIf="!load" mode="indeterminate"></mat-progress-bar>
         <div class="p-6 pb-0" fxLayout="column" fxLayoutAlign="center center">
             <div class="fill-current text-center">
                 <img alt="" class="w-16" src="assets/img/demo/logo.svg" />
@@ -97,11 +97,14 @@
             <div class="text-secondary text-center">Não tem uma conta?</div>
             <div class="text-secondary secondary2 text-center">
                 <span
-                    ><strong><a [routerLink]="['/cadastro']">Clique aqui </a></strong>
+                    ><strong
+                        ><a [routerLink]="['/cadastro']"
+                            >Clique aqui
+                        </a></strong
+                    >
                     para criar uma</span
                 >
             </div>
         </div>
-
     </div>
 </div>
