--- a/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -31,6 +31,8 @@
   </div>
 
 </div>
+<!-- LOADING -->
+<mat-progress-bar *ngIf="load" mode="indeterminate"></mat-progress-bar>
 <!-- Tabela de produtos -->
 <div class="mat-elevation-z8">
     <table aria-label="tabela-produtos" mat-table [dataSource]="dataSource">
