--- a/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -34,6 +34,8 @@
     </div>
 </div>
 
+<!-- LOADING -->
+<mat-progress-bar *ngIf="load" mode="indeterminate"></mat-progress-bar>
 <!-- Tabela de serviços -->
 <div class="mat-elevation-z8">
     <table aria-label="tableServicos" mat-table [dataSource]="dataSource">
