todos os loads adicionados, um tipo para as tabelas e um outro para as telas e modais pós click

--- a/src/app/core/lib/components/modais/planos/planos-modal/planos.component.html
+++ b/src/app/core/lib/components/modais/planos/planos-modal/planos.component.html
@@ -25,3 +25,13 @@
     </div>
   </div>
 </div>
+<!-- LOADING -->
+<div *ngIf="load" id="vex-splash-screen-load">
+  <div class="wrapper">
+      <div class="ball-scale-multiple">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+  </div>
+</div>
