--- a/src/app/views/pages/cadastro/cadastro.component.html
+++ b/src/app/views/pages/cadastro/cadastro.component.html
@@ -8,9 +8,6 @@
         class="card overflow-hidden w-full max-w-xs"
         style="height: 90vh; overflow-y: auto"
     >
-        <!-- LOADING -->
-        <mat-progress-bar *ngIf="load" mode="indeterminate"></mat-progress-bar>
-
         <div class="p-6 pb-0" fxLayout="column" fxLayoutAlign="center center">
             <div class="fill-current text-center">
                 <img
@@ -169,4 +166,14 @@
             </p>
         </div>
     </div>
+</div>
+<!-- LOADING -->
+<div *ngIf="load" id="vex-splash-screen-load">
+  <div class="wrapper">
+      <div class="ball-scale-multiple">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+  </div>
 </div>
