--- a/src/app/views/pages/recuperacao-senha/recuperacao-senha.component.html
+++ b/src/app/views/pages/recuperacao-senha/recuperacao-senha.component.html
@@ -4,8 +4,6 @@
     fxLayoutAlign="center center"
 >
     <div [@fadeInUp] class="card overflow-hidden w-full max-w-xs">
-        <!-- LOADING -->
-        <mat-progress-bar *ngIf="load" mode="indeterminate"></mat-progress-bar>
         <div class="p-6 pb-0" fxLayout="column" fxLayoutAlign="center center">
             <div class="fill-current text-center">
                 <img alt="" class="w-16" src="assets/img/demo/logo.svg" />
@@ -51,4 +49,14 @@
             </div>
         </div>
     </div>
+</div>
+<!-- LOADING -->
+<div *ngIf="load" id="vex-splash-screen-load">
+  <div class="wrapper">
+      <div class="ball-scale-multiple">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+  </div>
 </div>
