tabela e aberta com alguns dados preenchidos

--- a/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.scss
+++ b/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.scss
@@ -44,7 +44,7 @@
             float: right;
             width: 86%;
         }
-        #valorP {
+        #valorPromocional {
             float: right;
             width: 86%;
         }
