--- a/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
+++ b/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
@@ -18,7 +18,7 @@
         </mat-form-field>
     </div>
     <div class="btnAdd">
-        <button mat-button>Adicionar venda <mat-icon>add</mat-icon></button>
+        <button mat-button mat-raised-button color="primary">Adicionar venda <mat-icon>add</mat-icon></button>
     </div>
     <div class="icon-csv">
         <img src="../../../../assets/img/csv.svg" alt="icone csv">
