tentativas de resolucao da exibicao do tempo de servico

--- a/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
+++ b/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
@@ -31,9 +31,9 @@
                     <mat-form-field id="tempoEst" appearance="standard">
                         <mat-label>Tempo Estimado</mat-label>
                         <input
-                            formControlName="tempo"
-                            type="text"
                             matInput
+                            formControlName="tempo"
+                            type="number"
                             placeholder="Digite o Tempo"
                             maxlength="3"
                             required
