--- a/src/app/core/lib/components/modais/confirmacao/confirmacao.component.scss
+++ b/src/app/core/lib/components/modais/confirmacao/confirmacao.component.scss
@@ -1,6 +1,6 @@
-.modal{
-  .alinhar{
-    margin: 8%;
-    font-size: 18pt;
-  }
-}
+// .modal{
+//   .alinhar{
+//     margin: 8%;
+//     font-size: 18pt;
+//   }
+// }
