--- a/src/app/core/lib/components/modais/planos/planos-modal/planos.component.html
+++ b/src/app/core/lib/components/modais/planos/planos-modal/planos.component.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="planos-precos">
+<!-- <div class="planos-precos">
   <div class="bg-card py-4 px-gutter">
     <h1 class="display-1 mt-4 mb-4 text-center">Selecione um plano</h1>
     <h2 class="subheading-2 text-hint text-center max-w-lg mx-auto m-0">
@@ -24,14 +24,46 @@
       </button>
     </div>
   </div>
+</div> -->
+<!-- <mat-dialog-content class="mat-typography"> -->
+<div class="espacamentoTexto p-2">
+  <h1 class="display-1 mt-4 mb-4 text-center">Selecione um plano</h1>
+  <h2 class="subheading-2 text-hint text-center max-w-lg mx-auto m-0">
+    Escolha o plano que melhor se adequa ao seu negócio.
+  </h2>
 </div>
+
+<div class="my-31 container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="start start"
+  fxLayoutAlign.xs="start stretch" fxLayoutGap="24px">
+
+  <div class="card p-2" *ngFor="let plano of listaPlanos" fxFlex fxLayout="column" fxLayoutAlign="start center">
+    <div class="inline-block p-6 rounded-full bg-primary-light text-primary mx-auto" fxLayout="row"
+      fxLayoutAlign="center center">
+      <img src="{{plano.icone}}" alt="">
+    </div>
+
+    <h2 class="headline my-6">{{plano.nome}}</h2>
+
+    <div class="body-1" *ngFor="let beneficio of plano.beneficios"> {{beneficio.dsBeneficio}}</div>
+
+    <h3 class="display-2 font-bold my-6"><span class="text-secondary headline align-top"></span>{{plano.preco}}</h3>
+
+    <button class="rounded-full max-w-full w-200" mat-raised-button color="primary" type="button"
+      [mat-dialog-close]="true" (click)="contratarPlano(plano)">
+      CONTRATAR
+    </button>
+  </div>
+
+</div>
+<!-- </mat-dialog-content> -->
+
 <!-- LOADING -->
 <div *ngIf="load" id="vex-splash-screen-load">
   <div class="wrapper">
-      <div class="ball-scale-multiple">
-          <div></div>
-          <div></div>
-          <div></div>
-      </div>
+    <div class="ball-scale-multiple">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </div>
 </div>
