--- a/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
+++ b/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
@@ -22,10 +22,10 @@
             <div class="tempoEs">
                 <mat-form-field id="tempoEst" appearance="standard">
                     <mat-label>Tempo Estimado</mat-label>
-                    <input matInput formControlName="tempo" type="number" placeholder="Digite o Tempo" maxlength="3"
+                    <input matInput formControlName="tempoEstimado" type="number" placeholder="Digite o Tempo" maxlength="3"
                         required />
                     <span matTextPrefix class="minutos">Minutos&nbsp;</span>
-                    <mat-error *ngIf="form.get('tempo').hasError('required')">
+                    <mat-error *ngIf="form.get('tempoEstimado').hasError('required')">
                         Preencha este campo!
                     </mat-error>
                 </mat-form-field>
@@ -53,7 +53,7 @@
 
             <!-- toggle de valor promocional -->
             <div class="toggle">
-                <mat-slide-toggle><b>Este serviço mostrará o valor promocional</b></mat-slide-toggle>
+                <mat-slide-toggle formControlName="promocional"><b>Este serviço mostrará o valor promocional</b></mat-slide-toggle>
             </div>
 
             <!-- valor e valor promocional -->
@@ -72,7 +72,7 @@
                 <mat-form-field floatLabel="always" class="intval" appearance="standard">
                     <mat-label>Valor Promocional</mat-label>
                     <span matTextPrefix>R$&nbsp;</span>
-                    <input formControlName="valor" id="valorPromocional" matInput type="number"
+                    <input formControlName="valorPromocional" id="valorPromocional" matInput type="number"
                         class="example-right-align" placeholder="0" />
                     <mat-error *ngIf="form.get('valorPromocional').hasError('required')">
                         Preencha este campo!
